# gloop

./: .gitignore  Doxyfile  HACKING  INSTALL  LICENSE  Makefile.in  NEWS  NOTICE  README  bootstrap  configure.ac  gloop-0.pc.in  glycerin.pc.in
gloop/: Attribute.cxx  Attribute.hxx  Buffer.cxx  Buffer.hxx  BufferLayout.cxx  BufferLayout.hxx  BufferLayoutBuilder.cxx  BufferLayoutBuilder.hxx  BufferLayoutBuilderTest.cxx  BufferObject.cxx  BufferObject.hxx  BufferObjectTest.cxx  BufferRegion.cxx  BufferRegion.hxx  BufferTarget.cxx  BufferTarget.hxx  BufferTargetTest.cxx  BufferTest.cxx  ErrorChecker.cxx  ErrorChecker.hxx  FramebufferObject.cxx  FramebufferObject.hxx  FramebufferObjectTest.cxx  FramebufferTarget.cxx  FramebufferTarget.hxx  FramebufferTargetTest.cxx  Program.cxx  Program.hxx  ProgramTest.cxx  RenderbufferObject.cxx  RenderbufferObject.hxx  RenderbufferObjectTest.cxx  RenderbufferTarget.cxx  RenderbufferTarget.hxx  RenderbufferTargetTest.cxx  Shader.cxx  Shader.hxx  ShaderFactory.cxx  ShaderFactory.hxx  ShaderFactoryTest.cxx  (+21 more)
glycerin/: Attribute.cpp  Attribute.cxx  Attribute.hxx  Buffer.cpp  Buffer.cxx  Buffer.hpp  Buffer.hxx  BufferLayout.cpp  BufferLayout.cxx  BufferLayout.hxx  BufferLayoutBuilder.cpp  BufferLayoutBuilder.cxx  BufferLayoutBuilder.hpp  BufferLayoutBuilder.hxx  BufferLayoutBuilderTest.cxx  BufferObject.cpp  BufferObject.cxx  BufferObject.hxx  BufferObjectTest.cxx  BufferRegion.cpp  BufferRegion.cxx  BufferRegion.hxx  BufferTest.cxx  ErrorChecker.cpp  ErrorChecker.cxx  ErrorChecker.hpp  ErrorChecker.hxx  Program.cpp  Program.cxx  Program.hxx  ProgramTest.cxx  Shader.cpp  Shader.cxx  Shader.hxx  ShaderFactory.cpp  ShaderFactory.cxx  ShaderFactory.hxx  ShaderFactoryTest.cxx  ShaderTest.cxx  Uniform.cpp  (+15 more)
src/glycerin/: Attribute.cpp  Attribute.hpp  BufferLayout.hpp  BufferLayoutBuilder.cpp  BufferLayoutBuilderTest.cxx  BufferObject.hpp  BufferObjectTest.cxx  BufferRegion.cpp  ErrorChecker.cpp  Program.cpp  Program.hpp  ProgramTest.cxx  ShaderFactory.hpp  ShaderFactoryTest.cxx  Variable.cpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexAttribPointer.cpp  common.h
src/glycerin/buffer/: Buffer.cpp  Buffer.hpp  BufferLayout.cpp  BufferLayout.hpp  BufferLayoutBuilder.cpp  BufferLayoutBuilder.hpp  BufferObject.cpp  BufferRegion.cpp  BufferRegion.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexAttribPointer.cpp  VertexAttribPointer.hpp
src/glycerin/math/: Mat3.cpp  Mat3.hpp  Mat4.cpp  Mat4.hpp  Math.cpp  Math.hpp  Quat.cpp  Quat.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
src/glycerin/shader/: Attribute.cpp  Attribute.hpp  Program.cpp  Program.hpp  ProgramBuilder.cpp  ProgramBuilder.hpp  Shader.cpp  Shader.hpp  ShaderFactory.cpp  ShaderFactory.hpp  Uniform.cpp  Uniform.hpp  Variable.cpp  Variable.hpp
src/glycerin/system/: ErrorChecker.cpp  ErrorChecker.hpp  Exception.cpp  Exception.hpp
test/glycerin/: ShaderTest.cxx  VertexArrayObjectTest.cxx
test/glycerin/buffer/: BufferLayoutBuilderTest.cxx  BufferObjectTest.cxx  VertexArrayObjectTest.cxx
test/glycerin/math/: Mat3Test.cxx  Mat4Test.cxx  QuatTest.cxx  Vec3Test.cxx  Vec4Test.cxx
test/glycerin/shader/: BufferTest.cxx  ProgramBuilderTest.cxx  ProgramTest.cxx  (+4 more)
